infrastructure/helm/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    # ingress.kubernetes.io/force-ssl-redirect: "true"
  name: argocd
  namespace: argocd
spec:
  ingressClassName: nginx-internal
  rules:
    - host: argocd.k8s.koa-dev.dev
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  number: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - argocd.k8s.koa-dev.dev
      secretName: argocd-tls
